...
    
    func show(quiz result: QuizResultViewModel) {
        let alert = UIAlertController (
            title: result.title,
            message: presenter.makeResultsMessage(),
            preferredStyle: .alert)
        alert.view.accessibilityIdentifier = "GameResults"
        let action = UIAlertAction(title: result.buttonText, style: .default) { [weak self] _ in
            guard let self = self else {return}
            
            self.presenter.restartGame()
        }
        
...
