import XCTest

final class MovieQuizUITests: XCTestCase {
    
    var app: XCUIApplication!
    
    override func setUpWithError() throws {
        try super.setUpWithError()
        
        app = XCUIApplication()
        app.launch()
        
        
        continueAfterFailure = false
    }
    
    override func tearDownWithError() throws {
        try super.tearDownWithError()
        
        app.terminate()
        app = nil
    }
    
    // MARK: - Тест кнопки "Да"
    
    func testYesButton() {
        
        sleep(3)
        let firstPoster = app.images["Poster"]
        let firstPosterData = firstPoster.screenshot().pngRepresentation
        
        app.buttons["Yes"].tap()
        sleep(3)
        
        let secondPoster = app.images["Poster"]
        let secondPosterData = secondPoster.screenshot().pngRepresentation
        
        let indexLabel = app.staticTexts["Index"]
        
        XCTAssertNotEqual(firstPosterData, secondPosterData)
        XCTAssertEqual(indexLabel.label, "2/10")
    }
    
    // MARK: - Тест кнопки "Нет"
    
    
    func testNoButton() {
        
        sleep(3)
        let firstPoster = app.images["Poster"]
        let firstposterData = firstPoster.screenshot().pngRepresentation
        
        app.buttons["No"].tap()
        sleep(3)
        
        let secondPoster = app.images["Poster"]
        let secondPosterData = secondPoster.screenshot().pngRepresentation
        
        let indexLabel = app.staticTexts["Index"]
        
        XCTAssertNotEqual(firstposterData, secondPosterData)
        XCTAssertEqual(indexLabel.label, "2/10")
    }
    
    // MARK: - Тест алерта
    
    func testGameFinish() {
        
        for _ in 1...10 {
            app.buttons["No"].tap()
            sleep(2)
        }
        sleep(2)
        
        let alert = app.alerts["GameResults"]
        
        XCTAssertTrue(app.alerts["GameResults"].exists)
        XCTAssertTrue(alert.label == "Этот раунд окончен!")
        XCTAssertTrue(alert.buttons.firstMatch.label == "Сыграть ещё раз")
    }

    func testAlertDismiss() {
        
        for _ in 1...10 {
            sleep(1)
            app.buttons["No"].tap()
        }
        
        sleep(3)
        
        let alert = app.alerts["GameResults"]
        alert.buttons.firstMatch.tap()
        
        sleep(3)
        
        let indexLabel = app.staticTexts["Index"]
        
        XCTAssertFalse(app.alerts["GameResults"].exists)
        XCTAssertTrue(indexLabel.label == "1/10")
    }
    
}
